@@ -122,10 +122,10 @@ public:
 	int uniquifyScanNames();
 	int readDirectory(SSHANDLE xlrDevice, int mjdref,
 		int (*callback)(int, int, int, void *), void *data,
-		float *replacedFrac, int cacheOnly, int startScan, int stopScan, const char *binFilename = 0);
+		float *replacedFrac, int cacheOnly, int startScan, int stopScan, int forceVersion, const char *binFilename = 0);
 	int getCachedDirectory(SSHANDLE xlrDevice, int mjdref, const char *vsn, 
 		const char *dir, int (*callback)(int, int, int, void *), void *data,
-		float *replacedFrac, int force, int optionFast, int cacheOnly, int startScan, int stopScan);
+		float *replacedFrac, int force, int optionFast, int cacheOnly, int startScan, int stopScan, int forceVersion = -1);
 	int writeDirectory(SSHANDLE xlrDevice) const;
 };
 
